--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,22 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: rgb(33, 175, 144);
-  --ifm-color-primary-darker: rgb(31, 165, 136);
-  --ifm-color-primary-darkest: rgb(26, 136, 112);
-  --ifm-color-primary-light: rgb(70, 203, 174);
-  --ifm-color-primary-lighter: rgb(102, 212, 189);
-  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-color-primary: #fde324;
+  --ifm-color-primary-dark: #fddf07;
+  --ifm-color-primary-darker: #f3d702;
+  --ifm-color-primary-darkest: #c8b102;
+  --ifm-color-primary-light: #fde741;
+  --ifm-color-primary-lighter: #fde84f;
+  --ifm-color-primary-lightest: #feee7a;
+ 
+  --ifm-color-secondary: #fd6f21;
+  --ifm-color-secondary-dark: #fd5d05;
+  --ifm-color-secondary-darker: #f15702;
+  --ifm-color-secondary-darkest: #c64702;
+  --ifm-color-secondary-light: #fd813d;
+  --ifm-color-secondary-lighter: #fd8b4c;
+  --ifm-color-secondary-lightest: #fea676;
+ 
   --ifm-code-font-size: 95%;
 }
 
@@ -26,4 +35,8 @@
 
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+html, body {
+  font-family: 'Barlow', --apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
