--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -18,6 +18,10 @@
   z-index: 10;
 }
 
+.heroImage {
+  max-width: 60%;
+}
+
 .background {
   z-index: 1;
   position:absolute;
@@ -105,6 +109,10 @@ animation:move-clouds-back 200s linear infinite;
 @media screen and (max-width: 966px) {
   .heroBanner {
     padding: 2rem;
+  }
+
+  .heroImage {
+    max-width: 80%;
   }
 }
 
